Limit input size on small devices to prevent view bugs
closes #7

--- a/app/styles.css
+++ b/app/styles.css
@@ -18,6 +18,10 @@
     .title:before {
         content: 'LMA';
     }
+
+    .query-input {
+        max-width: 150px;
+    }
 }
 
 .ribbon {
